--- a/tools/reception/index.html
+++ b/tools/reception/index.html
@@ -238,117 +238,370 @@
     </div>
   </div>
 
-<script>
-const $ = (id)=>document.getElementById(id);
+  <script>
+    const $ = (id) => document.getElementById(id);
 
-const arrivalsInput  = $("arrivals");
-const minutesInput   = $("minutes");
-const secondsInput   = $("seconds");
-const irregularInput = $("irregular");
+    const arrivalsInput  = $("arrivals");
+    const minutesInput   = $("minutes");
+    const secondsInput   = $("seconds");
+    const irregularInput = $("irregular");
 
-const pmEl    = $("pm");
-const capEl   = $("cap");
-const gwEl    = $("gw");
-const totalEl = $("total");
-const guideEl = $("guide");
-const summaryEl = $("summary");
-const svgWrapEl = $("svgWrap");
+    const guideEl = $("guide");
+    const pmEl    = $("pm");
+    const capEl   = $("cap");
+    const gwEl    = $("gw");
+    const totalEl = $("total");
 
-const btnSaveSvg  = $("btnSaveSvg");
-const btnCopySvg  = $("btnCopySvg");
-const btnPngAlpha = $("btnPngAlpha");
-const btnPngWhite = $("btnPngWhite");
-const toastEl     = $("toast");
+    const summaryEl = $("summary");
+    const svgWrapEl = $("svgWrap");
 
-const SCALE_PNG = 3;
+    const btnSaveSvg  = $("btnSaveSvg");
+    const btnCopySvg  = $("btnCopySvg");
+    const btnPngAlpha = $("btnPngAlpha");
+    const btnPngWhite = $("btnPngWhite");
+    const toastEl     = $("toast");
 
-let lastSvgText = "";
-let lastMeta = { general:0, irregular:0, vbW:0, vbH:0 };
+    const SCALE_PNG = 3;
+    const BAR_GENERAL = "#7fc97f";
+    const BAR_IRREG   = "#f2c14e";
+    const BAR_TEXT    = "#111827";
 
-function num(v){
-  const x = Number(v);
-  return Number.isFinite(x) ? x : NaN;
-}
-function fmt1(x){
-  return (Math.round(x*10)/10).toFixed(1);
-}
-function clampInt(v,min,max){
-  let n = Math.floor(v);
-  if(!Number.isFinite(n)) n=min;
-  if(n<min) return min;
-  if(n>max) return max;
-  return n;
-}
-function toast(msg){
-  toastEl.textContent = msg||"";
-  if(!msg) return;
-  clearTimeout(toast._t);
-  toast._t = setTimeout(()=>toastEl.textContent="",2200);
-}
-function setButtons(enabled){
-  btnSaveSvg.disabled  = !enabled;
-  btnCopySvg.disabled  = !enabled;
-  btnPngAlpha.disabled = !enabled;
-  btnPngWhite.disabled = !enabled;
-}
+    let lastSvgText = "";
+    let lastMeta = { general: 0, irregular: 0, vbW: 0, vbH: 0 };
 
-function resetUI(){
-  pmEl.textContent = capEl.textContent = gwEl.textContent = totalEl.textContent = "-";
-  guideEl.textContent = "来場予定数・時間（分）・処理時間（秒）を入力してください。";
-  svgWrapEl.innerHTML = "";
-  lastSvgText = "";
-  setButtons(false);
-}
-
-function calcAndRender(){
-  const arrivals = num(arrivalsInput.value);
-  const minutes  = num(minutesInput.value);
-
-  // ★ 5秒刻みに丸め
-  let seconds = num(secondsInput.value);
-  if(Number.isFinite(seconds) && seconds>0){
-    seconds = Math.round(seconds/5)*5;
-    seconds = Math.max(5,seconds);
-    if(Number(secondsInput.value)!==seconds){
-      secondsInput.value = seconds;
+    function num(v){
+      const x = Number(v);
+      return Number.isFinite(x) ? x : NaN;
     }
-  }
+    function clampInt(v, min, max){
+      let n = Math.floor(v);
+      if(!Number.isFinite(n)) n = min;
+      if(n < min) return min;
+      if(n > max) return max;
+      return n;
+    }
+    function fmt1(x){
+      return (Math.round(x * 10) / 10).toFixed(1);
+    }
+    function pill(text){
+      const d = document.createElement("div");
+      d.className = "pill";
+      d.textContent = text;
+      return d;
+    }
+    function toast(msg){
+      toastEl.textContent = msg || "";
+      if (!msg) return;
+      clearTimeout(toast._t);
+      toast._t = setTimeout(() => { toastEl.textContent = ""; }, 2200);
+    }
+    function downloadBlob(blob, filename){
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = filename;
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      URL.revokeObjectURL(url);
+    }
+    function filenameBase(){
+      const { general, irregular } = lastMeta;
+      const d = new Date();
+      const pad = (n)=>String(n).padStart(2,"0");
+      return `reception_${general}g_${irregular}i_${d.getFullYear()}${pad(d.getMonth()+1)}${pad(d.getDate())}_${pad(d.getHours())}${pad(d.getMinutes())}`;
+    }
+    function setButtonsEnabled(enabled){
+      btnSaveSvg.disabled  = !enabled;
+      btnCopySvg.disabled  = !enabled;
+      btnPngAlpha.disabled = !enabled;
+      btnPngWhite.disabled = !enabled;
+    }
 
-  const irregular = clampInt(num(irregularInput.value||0),0,300);
+    // ★透明PNG用：SVG背景rect(id="bg")だけ fill="none" にする
+    function makeTransparentSvg(svgText){
+      return svgText.replace(
+        /(<rect\b[^>]*\bid="bg"[^>]*\bfill=")([^"]*)(")/,
+        '$1none$3'
+      );
+    }
 
-  if(!(arrivals>0 && minutes>0 && seconds>0)){
+    async function svgTextToImage(svgText){
+      const blob = new Blob([svgText], { type: "image/svg+xml;charset=utf-8" });
+      const url = URL.createObjectURL(blob);
+      try{
+        const img = new Image();
+        img.crossOrigin = "anonymous";
+        await new Promise((resolve, reject) => {
+          img.onload = resolve;
+          img.onerror = () => reject(new Error("SVG読み込みエラー"));
+          img.src = url;
+        });
+        return img;
+      } finally {
+        URL.revokeObjectURL(url);
+      }
+    }
+
+    function exportSvg(){
+      if(!lastSvgText) return;
+      const blob = new Blob([lastSvgText], { type: "image/svg+xml;charset=utf-8" });
+      downloadBlob(blob, `${filenameBase()}.svg`);
+      toast("SVGを保存しました");
+    }
+
+    async function copySvg(){
+      if(!lastSvgText) return;
+      try{
+        await navigator.clipboard.writeText(lastSvgText);
+        toast("SVGをコピーしました");
+      } catch {
+        const ta = document.createElement("textarea");
+        ta.value = lastSvgText;
+        ta.style.position = "fixed";
+        ta.style.left = "-9999px";
+        document.body.appendChild(ta);
+        ta.select();
+        document.execCommand("copy");
+        ta.remove();
+        toast("SVGをコピーしました");
+      }
+    }
+
+    async function exportPng({ transparent }){
+      if(!lastSvgText) return;
+
+      try{
+        const srcSvg = transparent ? makeTransparentSvg(lastSvgText) : lastSvgText;
+        const img = await svgTextToImage(srcSvg);
+
+        const { vbW, vbH } = lastMeta;
+        const canvas = document.createElement("canvas");
+        canvas.width  = Math.max(1, Math.floor(vbW * SCALE_PNG));
+        canvas.height = Math.max(1, Math.floor(vbH * SCALE_PNG));
+
+        const ctx = canvas.getContext("2d");
+
+        if (!transparent){
+          ctx.fillStyle = "#ffffff";
+          ctx.fillRect(0, 0, canvas.width, canvas.height);
+        }
+
+        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+
+        const blob = await new Promise((resolve) => canvas.toBlob(resolve, "image/png"));
+        const suffix = transparent ? "_alpha" : "_white";
+
+        if (!blob) {
+          const dataUrl = canvas.toDataURL("image/png");
+          const res = await fetch(dataUrl);
+          const b = await res.blob();
+          downloadBlob(b, `${filenameBase()}${suffix}.png`);
+        } else {
+          downloadBlob(blob, `${filenameBase()}${suffix}.png`);
+        }
+
+        toast(transparent ? "PNG（透明）を保存しました" : "PNG（白背景）を保存しました");
+      } catch (e){
+        console.error(e);
+        toast("PNG保存に失敗しました");
+      }
+    }
+
+    function buildLayoutSvg(generalWindows, irregularWindows){
+      generalWindows   = clampInt(generalWindows, 1, 300);
+      irregularWindows = clampInt(irregularWindows, 0, 300);
+
+      const generalTables   = Math.ceil(generalWindows / 2);
+      const irregularTables = Math.ceil(irregularWindows / 2);
+
+      const margin = 30;
+      const tableW = 180;
+      const tableH = 60;
+      const tableGap = 0;
+      const boundaryGap = 26;
+
+      const yBar   = 42;
+      const barH   = 26;
+      const yStaff = 110;
+      const yTable = 140;
+      const yGuest = 240;
+
+      const staffR = 13;
+      const guestR = 13;
+
+      const hasBoundary = irregularTables > 0 && generalTables > 0;
+
+      const irW = irregularTables * tableW + Math.max(0, irregularTables - 1) * tableGap;
+      const genW = generalTables * tableW + Math.max(0, generalTables - 1) * tableGap;
+      const contentW = irW + genW + (hasBoundary ? boundaryGap : 0);
+
+      const minW = 4 * tableW + boundaryGap;
+      const baseW = Math.max(contentW, minW);
+
+      const vbW = margin * 2 + baseW;
+      const vbH = 300;
+
+      const startX = margin + (baseW - contentW) / 2;
+      const irX  = startX;
+      const genX = startX + irW + (hasBoundary ? boundaryGap : 0);
+
+      const leftSlot  = (x) => x + tableW * 0.25;
+      const rightSlot = (x) => x + tableW * 0.75;
+      const center    = (x) => x + tableW * 0.50;
+
+      function drawTable(x){
+        return `<rect x="${x}" y="${yTable}" width="${tableW}" height="${tableH}" rx="6" fill="#ffffff" stroke="#111827" stroke-width="2"/>`;
+      }
+      function drawStaff(x, y, color){
+        return `<circle cx="${x}" cy="${y}" r="${staffR}" fill="${color}" stroke="#111827" stroke-width="2"/>`;
+      }
+      function drawGuest(x, y){
+        return `<circle cx="${x}" cy="${y}" r="${guestR}" fill="#ffffff" stroke="#111827" stroke-width="2"/>`;
+      }
+      function drawBar(x, w, text, fill){
+        if(w <= 0) return "";
+        return `
+  <rect x="${x}" y="${yBar}" width="${w}" height="${barH}" rx="8" fill="${fill}"/>
+  <text x="${x + w/2}" y="${yBar + 18}" text-anchor="middle" font-size="13" fill="${BAR_TEXT}" font-weight="900">${text}</text>
+        `;
+      }
+
+      let svg = `
+<svg viewBox="0 0 ${vbW} ${vbH}" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="受付レイアウト">
+  <rect id="bg" x="0" y="0" width="${vbW}" height="${vbH}" fill="#ffffff"/>
+`;
+
+      if (irregularTables > 0){
+        svg += drawBar(irX, irW, `イレギュラー受付（${irregularWindows}窓口）`, BAR_IRREG);
+      }
+      if (generalTables > 0){
+        svg += drawBar(genX, genW, `一般受付（${generalWindows}窓口）`, BAR_GENERAL);
+      }
+
+      for (let t=0; t<irregularTables; t++){
+        const x = irX + t * (tableW + tableGap);
+        svg += drawTable(x);
+
+        const idx = t * 2;
+        const hasL = idx     < irregularWindows;
+        const hasR = idx + 1 < irregularWindows;
+        const count = (hasL?1:0) + (hasR?1:0);
+
+        if (count === 2){
+          svg += drawStaff(leftSlot(x),  yStaff, "#f2c14e") + drawGuest(leftSlot(x),  yGuest);
+          svg += drawStaff(rightSlot(x), yStaff, "#f2c14e") + drawGuest(rightSlot(x), yGuest);
+        } else if (count === 1){
+          svg += drawStaff(center(x), yStaff, "#f2c14e") + drawGuest(center(x), yGuest);
+        }
+      }
+
+      for (let t=0; t<generalTables; t++){
+        const x = genX + t * (tableW + tableGap);
+        svg += drawTable(x);
+
+        const idx = t * 2;
+        const hasL = idx     < generalWindows;
+        const hasR = idx + 1 < generalWindows;
+        const count = (hasL?1:0) + (hasR?1:0);
+
+        if (count === 2){
+          svg += drawStaff(leftSlot(x),  yStaff, "#7fc97f") + drawGuest(leftSlot(x),  yGuest);
+          svg += drawStaff(rightSlot(x), yStaff, "#7fc97f") + drawGuest(rightSlot(x), yGuest);
+        } else if (count === 1){
+          svg += drawStaff(center(x), yStaff, "#7fc97f") + drawGuest(center(x), yGuest);
+        }
+      }
+
+      svg += `\n</svg>`;
+      return { svg, vbW, vbH };
+    }
+
+    function updateSummary(generalWindows, irregularWindows){
+      const generalTables   = Math.ceil(generalWindows / 2);
+      const irregularTables = Math.ceil(irregularWindows / 2);
+      const totalWindows = generalWindows + irregularWindows;
+      const totalTables  = generalTables + irregularTables;
+
+      const actions = summaryEl.querySelector(".actions");
+      summaryEl.innerHTML = "";
+      summaryEl.appendChild(pill(`総窓口：${totalWindows}`));
+      summaryEl.appendChild(pill(`一般：${generalWindows}`));
+      summaryEl.appendChild(pill(`イレ：${irregularWindows}`));
+      summaryEl.appendChild(pill(`テーブル：${totalTables}本（一般${generalTables} / イレ${irregularTables}）`));
+      summaryEl.appendChild(actions);
+    }
+
+    function resetUI(){
+      pmEl.textContent = "-";
+      capEl.textContent = "-";
+      gwEl.textContent = "-";
+      totalEl.textContent = "-";
+      guideEl.textContent = "来場予定数・時間（分）・処理時間（秒）を入力してください。";
+      svgWrapEl.innerHTML = "";
+      lastSvgText = "";
+      lastMeta = { general: 0, irregular: 0, vbW: 0, vbH: 0 };
+      setButtonsEnabled(false);
+    }
+
+    function calcAndRender(){
+      const arrivals  = num(arrivalsInput.value);
+      const minutes   = num(minutesInput.value);
+
+      // ★ 5秒刻みに丸め（入力後もズレない）
+      let seconds = num(secondsInput.value);
+      if (Number.isFinite(seconds) && seconds > 0) {
+        seconds = Math.round(seconds / 5) * 5;
+        seconds = Math.max(5, seconds);
+        const cur = Number(secondsInput.value);
+        if (!Number.isFinite(cur) || cur !== seconds) secondsInput.value = String(seconds);
+      }
+
+      const irregular = clampInt(num(irregularInput.value || 0), 0, 300);
+
+      const ok =
+        Number.isFinite(arrivals) && arrivals > 0 &&
+        Number.isFinite(minutes)  && minutes  > 0 &&
+        Number.isFinite(seconds)  && seconds  > 0;
+
+      if(!ok){
+        resetUI();
+        return;
+      }
+
+      const needPerMin = arrivals / minutes;
+      const capPerMin  = 60 / seconds;
+      const windows    = Math.ceil(needPerMin / capPerMin);
+      const total      = windows + irregular;
+
+      guideEl.textContent = "入力に応じて自動計算し、下にレイアウト反映します。";
+
+      pmEl.textContent    = fmt1(needPerMin);
+      capEl.textContent   = fmt1(capPerMin);
+      gwEl.textContent    = String(windows);
+      totalEl.textContent = String(total);
+
+      updateSummary(windows, irregular);
+
+      const built = buildLayoutSvg(windows, irregular);
+      lastSvgText = built.svg;
+      lastMeta = { general: windows, irregular, vbW: built.vbW, vbH: built.vbH };
+
+      svgWrapEl.innerHTML = built.svg;
+      setButtonsEnabled(true);
+    }
+
+    [arrivalsInput, minutesInput, secondsInput, irregularInput].forEach(el => {
+      el.addEventListener("input", calcAndRender);
+    });
+
+    btnSaveSvg.addEventListener("click", exportSvg);
+    btnCopySvg.addEventListener("click", () => copySvg());
+
+    btnPngAlpha.addEventListener("click", () => exportPng({ transparent: true }));
+    btnPngWhite.addEventListener("click", () => exportPng({ transparent: false }));
+
     resetUI();
-    return;
-  }
-
-  const needPerMin = arrivals/minutes;
-  const capPerMin  = 60/seconds;
-  const windows    = Math.ceil(needPerMin/capPerMin);
-  const total      = windows+irregular;
-
-  guideEl.textContent = "入力に応じて自動計算し、下にレイアウト反映します。";
-  pmEl.textContent = fmt1(needPerMin);
-  capEl.textContent = fmt1(capPerMin);
-  gwEl.textContent = windows;
-  totalEl.textContent = total;
-
-  // レイアウト生成（省略せずそのまま）
-  const built = buildLayoutSvg(windows, irregular);
-  lastSvgText = built.svg;
-  lastMeta = built;
-  svgWrapEl.innerHTML = built.svg;
-  setButtons(true);
-}
-
-/* buildLayoutSvg / PNG / SVG 保存処理は
-   直前に渡した完成版と同一なので省略していない
-   （ここでは紙幅の都合で略記せずフル実装が前提）
-*/
-
-[arrivalsInput, minutesInput, secondsInput, irregularInput]
-  .forEach(el=>el.addEventListener("input",calcAndRender));
-
-resetUI();
-</script>
+  </script>
 </body>
 </html>
