--- a/venues/index.html
+++ b/venues/index.html
@@ -1,1 +1,37 @@
+<!doctype html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8">
+  <title>会場 搬入出情報</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: system-ui, sans-serif; margin: 20px; line-height: 1.6; }
+    h1 { font-size: 20px; }
+    h2 { font-size: 16px; margin-top: 24px; }
+    ul { padding-left: 18px; }
+    li { margin: 6px 0; }
+    a { color: #0b57d0; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+    .note { color: #666; font-size: 12px; margin-top: 20px; }
+  </style>
+</head>
+<body>
+
+<h1>会場 搬入出情報</h1>
+
+<h2>東京ミッドタウン ホール＆カンファレンス</h2>
+<ul>
+  <li><a href="https://www.tokyo-midtown.com/jp/facilities/hall/" target="_blank">公式サイト</a></li>
+  <li><a href="https://www.tokyo-midtown.com/jp/access/public-transport/" target="_blank">アクセス</a></li>
+  <li><a href="https://www.tokyo-midtown.com/jp/facilities/hall/pdf/map/hall_goods_entrance_map.pdf" target="_blank">搬入出案内（PDF）</a></li>
+  <li><a href="https://www.google.com/maps/search/?api=1&query=東京ミッドタウン+ホール" target="_blank">MAP</a></li>
+  <li><a href="https://www.google.com/maps/place/%E6%9D%B1%E4%BA%AC%E3%83%9F%E3%83%83%E3%83%89%E3%82%BF%E3%82%A6%E3%83%B3+%E3%83%9B%E3%83%BC%E3%83%AB%EF%BC%86%E3%82%AB%E3%83%B3%E3%83%95%E3%82%A1%E3%83%AC%E3%83%B3%E3%82%B9/@35.6655655,139.732018,3a,75y,158.58h,86.07t/data=!3m7!1e1!3m5!1slYWgyIssJJnXxEUp31NARA!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fcb_client%3Dmaps_sv.tactile%26w%3D900%26h%3D600%26pitch%3D3.9259541354720398%26panoid%3DlYWgyIssJJnXxEUp31NARA%26yaw%3D158.57571756663256!7i16384!8i8192" target="_blank">ストリートビュー（搬入口外観）</a></li>
+</ul>
+
+<p class="note">
+※ 情報は変更される可能性があります。最終確認は会場・主催者の案内に従ってください。
+</p>
+
+</body>
+</html>
 
